# BasketBall-prediction

./: .gitignore  Makefile  README.md  notebook_executed.ipynb  pyproject.toml  requirements.txt
.github/workflows/: production-features-pipeline.yml
notebooks/: 00_update_local_data.ipynb  01_eda.ipynb  02_data_processing.ipynb  03_train_test_split.ipynb  04_model_baseline.ipynb  05_feature_engineering.ipynb  06_feature_selection.ipynb  07_model_testing.ipynb  08_backfill_features.ipynb  09_production_features_pipeline.ipynb  10_model_training_pipeline.ipynb
src/: streamlit_app.py
src/data/: build_features.py  cleaning.py
src/models/model1/: hyperparameters_tuning.py  train.py
src/utils/: constants.py  hopsworks_utils.py  webscraping.py
