[tool.poetry]
name = "basketball-prediction"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"
packages = [{include = "basketball_prediction"}]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
neptune = "1.4.1"
hopsworks = "3.0.4"
streamlit = "^1.25.0"
pandas = "^2.0.3"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"
xgboost = "1.6"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
lightgbm = "3.3.2"
joblib = "^1.3.2"
python-dotenv = "^1.0.0"
optuna = "2.10"
scikit-learn = "^1.3.0"
neptune-xgboost = "^1.1.1"
neptune-lightgbm = "^2.0.0"
neptune-optuna = "^1.1.0"
fonttools = "4.42.0"
selenium = "^4.11.2"
webdriver-manager = "4"
scrapingant-client = "^2.0.1"
bs4 = "^0.0.1"
lxml = "^4.9.3"
shapley = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
