[tool.poetry]
name = "basketball-prediction"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.5"
pandas = "^2.1"
scrapingant-client = "^2.1.0"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
shap = "^0.47.0"
lightgbm = "^4.6.0"
xgboost = "^3.0.0"
optuna = "^4.2.1"
plotly = "^6.0.1"
neptune = {extras = ["lightgbm"], version = "^1.13.0"}
neptune-xgboost = "^1.1.1"
scipy = "1.11.4"
neptune-optuna = "^1.4.1"
hopsworks = {extras = ["python"], version = "^4.1.8"}
nbformat = "^5.10.4"
streamlit = "^1.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"